--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Task Flow
+      Trello Clone
     </title>
   </head>
   <body>
